Fixed some layout problems in Firefox for windows and linux.

--- a/chrome/skin/hashr.css
+++ b/chrome/skin/hashr.css
@@ -2,10 +2,13 @@
 	width: 20px;
 }
 
+#logoContainer, #copyContainer {
+	-moz-box-align: center;
+}
+
 #logo {
+	list-style-image: url("chrome://hashr/skin/hashr_banner.png");
 	margin-left: 15px;
-	height: 16px;
-	width: 56px;
 }
 
 #hashr-statusbarpanel {
@@ -14,18 +17,14 @@
 
 #hashrClipboard {
 	background: url("chrome://hashr/skin/copy_up.png") no-repeat;
-	width: 14px;
-	height: 14px;
+	width: 16px;
+	height: 16px;
 }
 
 #hashrClipboard:hover {
 	background: url("chrome://hashr/skin/copy_over.png") no-repeat;
-	width: 14px;
-	height: 14px;
 }
 
 #hashrClipboard:active {
 	background: url("chrome://hashr/skin/copy_down.png") no-repeat;
-	width: 14px;
-	height: 14px;
 }
